--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,11 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 
-# TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
 config/secrets.yml
+
+# dotenv
+.env
 
 ## Environment normalization:
 /.bundle
@@ -33,3 +35,8 @@ bower.json
 
 # Ignore pow environment settings
 .powenv
+
+# Ignore Byebug command history file.
+.byebug_history
+
+.idea
